# Player

./: README.md
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  SafeQueue.h  native-lib.cpp
app/src/main/cpp/constant/: Global.h  Session.h
app/src/main/cpp/ffmepg/: AudioChannel.cc  AudioChannel.h  AudioChannle.cc  AudioChannle.h  BaseChannel.h  GetPcmCallBack.h  Player.cc  Player.h  PlayerCallBack.cc  PlayerCallBack.h  VideoChannel.cc  VideoChannel.h
app/src/main/cpp/helper/: OpenSlElHelper.cc  OpenSlElHelper.h
app/src/main/cpp/utils/: ReleaseUtils.h  RenderCallBack.h  SafeQueue.h
app/src/main/java/com/nelson/player/: MainActivity.java
app/src/main/java/com/nelson/player/player/: FFmpegCallBack.java  PlayerCallBack.java  PlayerCallBackAdapter.java  PlayerHelper.java  PlayerNative.java
app/src/main/java/com/nelson/player/utils/: CommonUtil.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/main/res/values-v26/: styles.xml
gradle/wrapper/: gradle-wrapper.properties
